<resources>
    <!-- Customer part-->
    <string name="app_name">Mat</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="loading">Loading…</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="signed_out">Signed Out</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="saveInput">Save</string>

    <!-- Restaurant part-->
    <string name="profPicture">Profile Picture</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="restaurantDescription">Restaurant Description</string>
    <string name="restaurantAddress">Address</string>

    <!-- Address placeholder values and hints -->
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="postCode">Post Code</string>
    <string name="menu">Menu</string>
    <string name="mat">Mat</string>
    <string name="food">Food</string>

    <!-- Delivery part-->
    <string name="customerName" />
    <string name="restName" />
    <string name="timeFood" />

    <!-- Delivery fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customername" />
    <string name="customerAddress" />
    <string name="acceptDelivery">Set Delivered</string>
    <string name="deliveryitemid" />
    <string name="deliveryname">"   DETAILS"</string>
    <string name="deliveryaddress" />
    <string name="deliverysetid" />
    <string name="deliverysetname" />
    <string name="deliverysetaddress" />
    <string name="deliveryrestname" />
    <string name="deliveryrestaname" />
    <string name="deliverysetrestname" />
    <string name="setdeliverystatus" />
    <string name="mydeliverycustomername" />
    <string name="mydeliveryrestaurantname" />
    <string name="myseliverystatus" />
    <string name="dialogtitle">Order Details</string>
    <string name="dialogcustomername" />
    <string name="actionfavorite" />
    <string name="actionsettings" />
    <string name="title_activity_child">title_activty_child</string>
    <string name="derliveryImg" />
    <string name="mydeliveryimg" />
    <string name="phoneimage" />
    <string name="mobileImage" />
    <string name="customerNameImage" />
    <string name="restaurantNameImage" />
    <string name="addressImage" />
    <string name="deliveryStatusImage" />

    <!-- Menu Items -->
    <string name="price">Price</string>
    <string name="itemName">Item Name</string>
    <string name="categoryName">Category Name</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="food_name">Food Name</string>
    <string name="total">Total:</string>
    <string name="order">Order</string>

    <!-- Restaurant Order Details -->
    <string name="id">ID</string>
    <string name="items">Items</string>
    <string name="done">Set Done</string>
    <string name="time">Time</string>
    <string name="timePlaceholder">%s:%s</string>
    <string name="phone">Phone Number</string>
    <string name="image">Image</string>
    <string name="_0_kr">0 kr</string>
    <string name="_1">1</string>

</resources>
