<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.company.mat.DeliveryManFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/fragmantText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/customername" />

    <TextView
        android:id="@+id/fragmentText_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/customerAddress" />

    <Button
        android:id="@+id/fragmentButton_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:text="@string/acceptDelivery" />

</FrameLayout>
