<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_View="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dp"
    card_View:cardBackgroundColor="#fff"
    card_View:cardCornerRadius="5dp"
    android:layout_margin="10dp">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singel_Row"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    tools:context="com.company.mat.DeliveryManActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/derliveryImg"
        android:layout_centerVertical="true"
        card_View:srcCompat="@mipmap/new_delivery_round" />

    <TextView
        android:id="@+id/textView_customer_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="5dp"
        android:text="@string/customerName"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView_rest_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="160dp"
        android:layout_marginRight="270dp"
        android:padding="5dp"
        android:text="@string/restName"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="290dp"
        android:layout_marginRight="290dp"
        android:padding="5dp"
        android:text="@string/timeFood"
        android:textSize="15sp" />

</RelativeLayout>
</android.support.v7.widget.CardView>